# pluvio

./: .gitignore  .gitmodules  Cargo.toml  README.md  example.txt
.claude/: settings.local.json
docs/: codebase_notes.md  phase3.md  phase3_codebase_notes.md  pluvio_collective_plan.md
example/uring_example/: Cargo.toml
example/uring_example/src/: main.rs
examples/mpi_example/: .gitignore  Cargo.toml
examples/mpi_example/jobs/: common.sh  mpi-example-job.sh  mpi-example.sh
examples/mpi_example/src/: main.rs
examples/remoteio_example/: Cargo.toml
examples/remoteio_example/src/: main.rs
examples/ucx_example/: Cargo.toml
examples/ucx_example/src/: main.rs
examples/uring_example/: Cargo.toml
examples/uring_example/src/: main.rs
pluvio_collective/: Cargo.toml  README.md
pluvio_collective/examples/: coll_adaptive.rs  coll_mpi_example.rs  coll_ucx_example.rs  coll_ucx_pipelined.rs
pluvio_collective/src/: communicator.rs  error.rs  lib.rs  op.rs
pluvio_collective/src/mpi_backend/: allgather.rs  allreduce.rs  broadcast.rs  communicator.rs  datatype.rs  mod.rs  reactor.rs  scatter.rs
pluvio_collective/src/ucx_backend/: adaptive.rs  am_router.rs  bootstrap.rs  broadcast.rs  bruck.rs  communicator.rs  mod.rs  pipelined_ring.rs  recursive_doubling.rs  ring.rs  scatter.rs  tag.rs  util.rs
pluvio_collective/tests/: cross_check.rs  mpi_allreduce_2proc.rs  scatter_2proc.rs  ucx_allgather_2proc.rs  ucx_allreduce_2proc.rs  ucx_broadcast_2proc.rs  ucx_pipelined_allreduce_2proc.rs  ucx_recursive_doubling_2proc.rs
pluvio_runtime/: Cargo.toml
pluvio_runtime/src/: lib.rs  select.rs  track.rs
pluvio_runtime/src/executor/: mod.rs  spsc.rs  stat.rs
pluvio_runtime/src/reactor/: allocator.rs  builder.rs  mod.rs
pluvio_runtime/src/task/: mod.rs  stat.rs  waker.rs
pluvio_timer/: Cargo.toml
pluvio_timer/src/: lib.rs
pluvio_ucx/: Cargo.toml
pluvio_ucx/src/: lib.rs  reactor.rs  stats.rs
pluvio_ucx/src/worker/: am.rs  endpoint.rs  listener.rs  mod.rs
pluvio_uring/: Cargo.toml
pluvio_uring/src/: allocator.rs  builder.rs  file.rs  lib.rs  mod.rs  reactor.rs  socket.rs
scripts/: run_integration_tests.sh
src/: executor.rs  future.rs  lib.rs  main.rs  reactor.rs
src/executor/: mod.rs  stat.rs
src/io/: allocator.rs  file.rs  mod.rs
src/reactor/: allocator.rs  builder.rs  mod.rs
src/task/: mod.rs  stat.rs  waker.rs
tests/: allocator_tests.rs
