[workspace]
resolver = "3"
members = [
    "pluvio_runtime",
    "pluvio_uring",
    "pluvio_ucx", "example/ucx_example",
]

exclude = [
    "example/uring_example",
    "example/ucx_example",
]

[package]
name = "pluvio"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
