[package]
name = "pluvio_runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable Perfetto track ID management for task-level trace separation
perfetto-tracks = []

[dependencies]
core_affinity = "0.8.3"
futures = "0.3.31"
futures-lite = "2.6.0"
slab = "0.4.9"
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
async-backtrace = "0.2"

[dev-dependencies]

