[package]
name = "mpi_example"
version = "0.1.0"
edition = "2024"

[dependencies]
mpi = "0.8.0"
pluvio_runtime = { path = "../../pluvio_runtime" }
pluvio_ucx = { path = "../../pluvio_ucx" }
pluvio_timer = { path = "../../pluvio_timer" }
pluvio_uring = { path = "../../pluvio_uring" }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
