[package]
name = "remoteio_example"
version = "0.1.0"
edition = "2024"

[dependencies]
pluvio_runtime = { path = "../../pluvio_runtime" }
pluvio_uring = { path = "../../pluvio_uring" }
pluvio_ucx = { path = "../../pluvio_ucx" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures = { workspace = true }
anyhow = "1.0.100"
libc = "0.2.177"
